--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
           </div>
           <img src="./images/icon-supervisor.svg" alt="" />
         </div>
+        <div class="column">
+          <div class="info__panel--2">
+            <div class="line--2"></div>
+            <div class="description">
+              <h2>Team Builder</h2>
+              <p>Scans our talent network to create the optimal team for your project</p>
+            </div>
+            <img src="./images/icon-team-builder.svg" alt="" />
+          </div>
+          <div class="info__panel--3">
+            <div class="line--3"></div>
+            <div class="description">
+              <h2>Karma</h2>
+              <p>Regularly evaluates our talent to ensure quality</p>
+            </div>
+            <img src="./images/icon-karma.svg" alt="" />
+          </div>
+        </div>
+        <div class="info__panel--4">
+          <div class="line--4"></div>
+          <div class="description">
+            <h2>Calculator</h2>
+            <p>Uses data from past projects to provide better delivery estimates</p>
+          </div>
+          <img src="./images/icon-calculator.svg" alt="" />
+        </div>
       </div>
     </section>
     <!-- <footer>
